made logo in the corner fixed and visible + animation works now on hover

--- a/css/styles.css
+++ b/css/styles.css
@@ -373,11 +373,11 @@ p {
 }
 
 .logo-wrapper {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  border: 2px --accent-color;
   overflow: hidden;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -555,8 +555,12 @@ p {
   width: 90%;
   top: 40px;
   right: 70px;
+}
 
-  
+.logo-svg3 {
+  width: 400px;
+  top: 0px;
+  right: 0px;
 }
 
 .game-preview {
